Fix alignment

--- a/application/ui/src/features/models/train-model/advanced-settings/components/parameters.module.scss
+++ b/application/ui/src/features/models/train-model/advanced-settings/components/parameters.module.scss
@@ -8,6 +8,7 @@
     border-radius: var(--spectrum-global-dimension-size-75);
     padding: var(--spectrum-global-dimension-size-200);
     background-color: var(--spectrum-global-color-gray-75);
+    grid-column: 1 / -1;
 
     + .parameterGroupContainer {
         margin-top: var(--spectrum-global-dimension-size-200);
